	to 0.8 sec in my desktop. The analysis prints now also the 'ss'
	term (residual sum of squares) which for symmetric analysis is
	equal to squared m12.

	* procrustes: marginally faster way of getting sum of squares of a
	matrix. This should not influence the results, but one metaMDS()
	trace result has a small difference in nearly-zero rmse (was
	1.094382e-06, is 1.09439e-06) in my desktop.
	
Version 2.1-23 (closed January 25, 2013)

	* clamtest: Richard Telford reported an extreme case 
	{rbind(a=c(1,0,5,10,4),b=c(0,10,5,2,1))} where
	clamtest failed due to inadequately setting up minimum
	abundance thresholds for rare species. The issue is solved
	by hard coding the minimum values to be 1 when no suitable 
	solution is found. Also, clamtest failed when the community matrix 
	had no column names, this is now fixed.

	* capscale: It was wrongly assumed that eigenvalues could be used
	in normalization of species scores, but this worked only with
	Euclidean distances. Now normalization is done explicitly with
	decostand() function. This change means that scaling of species
	scores will change, and graphs can look different than
	previously. All analyses should be redone. Function now displays
	the value of the additive constant with 'add = TRUE'.

	* stressplot: added stressplot() methods for wcmdscale(),
	capscale(), cca(), rda(), prcomp() and princomp() results.  These
	also work with constrained ordination. These methods display the
	ordination distances in given number of dimensions (defaults 'k =
	2') against original observed distances.  These original distances
	are found from the full space solution, and in capscale() and
	wcmdscale() they are correct for the imaginary axes. The weights
	are used in wcmdscale() and cca() so that their distances differ
	from plotted ordinations, but agree with eigenvalues. Partial
	models (p-dbRDA, pRDA, pCCA) add the partial component both to the
	original dissimilarities and the fit.
