@@ -13,17 +13,18 @@
 \usage{
 treedive(comm, tree, match.force = FALSE)
 treeheight(tree)
-treedist(x, tree, relative = TRUE, ...)
+treedist(x, tree, relative = TRUE, match.force = FALSE, ...)
 }
 
 \arguments{
   \item{comm, x}{Community data frame or matrix.}
   \item{tree}{A dendrogram which for \code{treedive} must be for species
     (columns).}
-  \item{match.force}{Force matching of column names in \code{comm} and
-    labels in \code{tree}. If \code{FALSE}, matching only happens when
-    dimensions differ, and in that case the species must be in identical
-    order in both.}
+  \item{match.force}{Force matching of column names in data
+    (\code{comm}, \code{x}) and labels in \code{tree}. If \code{FALSE},
+    matching only happens when dimensions differ (with a warning or
+    message). The order of data must match to the order in \code{tree}
+    if matching by names is not done.}
   \item{relative}{Use distances relative to the height of combined tree.}
   \item{\dots}{Other arguments passed to functions (ignored).}
 }
@@ -79,6 +80,15 @@ treedist(x, tree, relative = TRUE, ...)
   A vector of diversity values or a single tree height, or a
   dissimilarity structure that inherits from \code{\link{dist}} and
   can be used similarly.  
+}
+
+\seealso{
+  Function \code{treedive} is similar to the phylogenetic diversity
+  function \code{\link[picante]{pd}} in \pkg{picante}, but excludes tree
+  root if that is not needed to connect species. Function
+  \code{treedist} is similar to the phylogenetic similarity
+  \code{\link[picante]{phylosor}} in \pkg{picante}, but excludes
+  unneeded tree root and returns distances instead of similarities.  
 }
 
 \references{
